Remove `RsTeamBruker` class and update references to use `RsTeamWithBrukere`. Refactor unit tests accordingly. #deploy-test-dolly-backend